# marklip

./: AGENTS.md  Cargo.toml  README.md
.github/homebrew/: marklip.rb.mustache
.github/workflows/: release.yml
docs/: IMPLEMENTATION.md  SPEC.md
examples/raycast/: README.md  marklip-auto.sh  marklip-to-html.sh  marklip-to-md.sh
src/: main.rs
