[package]
name = "marklip"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clipboard-rs = "0.3.1"
htmd = "0.5.0"
markdown = "1.0.0"
objc2 = "0.6.0"
objc2-foundation = { version = "0.3.2", features = ["NSUserNotification", "NSString"] }
objc2-notification-center = "0.3.0"
thiserror = "1.0"
strip_markdown = "0.2.0"
